// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordStrength reducer should handle PASSWORD_STRENGTH_PASSWORD_CHANGED 1`] = `
Object {
  "password": "some-password",
  "passwordConfirmation": "",
}
`;

exports[`PasswordStrength reducer should handle PASSWORD_STRENGTH_PASSWORD_CONFIRMATION_CHANGED 1`] = `
Object {
  "password": "",
  "passwordConfirmation": "some-password",
}
`;

exports[`PasswordStrength reducer should return the initial state 1`] = `
Object {
  "password": "",
  "passwordConfirmation": "",
}
`;
